Enhance UI layout and functionality: update CSS for footer and version list, add theme toggle in HTML, implement IPC communication in main and preload scripts, and update renderer to handle version display.

--- a/index.html
+++ b/index.html
@@ -1,64 +1,71 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta
-      http-equiv="Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <meta
-      http-equiv="X-Content-Security-Policy"
-      content="default-src 'self'; script-src 'self'"
-    />
-    <title>Mi Primer Electron</title>
-    <link rel="stylesheet" type="text/css" href="./global.css" />
-</head>
-<body>
-    <main>
-        <h1>Hello from Electron</h1>
-        <table id="tabla">
-            <thead>
-                <tr>
-                    <th>Movimiento</th>
-                    <th>Fecha</th>
-                    <th>Monto</th>
-                    <th>Usuario</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Ingreso</td>
-                    <td>24-07-2024 12:00:00</td>
-                    <td>100000 ➕</td>
-                    <td>Sebastian</td>
-                </tr>
-            </tbody>
-            <tfoot>
-                <tr>
-                    <th>Total: 100000</th>
-                    <td>➕ Nueva Transaccion</td>
-                </tr>
-            </tfoot>
-        </table>
-        <article id="resume">
-            <h2>Resumen Financiero</h2>
-            <section>
-                <h3>Sebastian</h3>
-                <p>
-                    Sebastian lleva un registro positivo con un total de: 100000
-                </p>
-            </section>
-        </article>
-    </main>
-</body>
-<footer>
-    <h2>Versiones:</h2>
-    <ul>
-        <li id="nodeVersion"></li>
-        <li id="chromeVersion"></li>
-        <li id="electronVersion"></li>
-    </ul>
-</footer>
-<script src="./renderer.js"></script>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta
+        http-equiv="Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'"
+        />
+        <meta
+        http-equiv="X-Content-Security-Policy"
+        content="default-src 'self'; script-src 'self'"
+        />
+        <title>Mi Primer Electron</title>
+        <link rel="stylesheet" type="text/css" href="./global.css" />
+    </head>
+    <body>
+        <header>
+            <nav class="Themes">
+                <button id="toggle-theme">
+                    Toggle Theme
+                </button>
+            </nav>
+        </header>
+        <main>
+            <h1>Hello from Electron</h1>
+            <table id="tabla">
+                <thead>
+                    <tr>
+                        <th>Movimiento</th>
+                        <th>Fecha</th>
+                        <th>Monto</th>
+                        <th>Usuario</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Ingreso</td>
+                        <td>24-07-2024 12:00:00</td>
+                        <td>100000 ➕</td>
+                        <td>Sebastian</td>
+                    </tr>
+                </tbody>
+                <tfoot>
+                    <tr>
+                        <th>Total: 100000</th>
+                        <td>➕ Nueva Transaccion</td>
+                    </tr>
+                </tfoot>
+            </table>
+            <article id="resume">
+                <h2>Resumen Financiero</h2>
+                <section>
+                    <h3>Sebastian</h3>
+                    <p>
+                        Sebastian lleva un registro positivo con un total de: 100000
+                    </p>
+                </section>
+            </article>
+        </main>
+        <footer>
+            <h2>Versiones:</h2>
+            <ul class="versionsList">
+                <li id="nodeVersion"></li>
+                <li id="chromeVersion"></li>
+                <li id="electronVersion"></li>
+            </ul>
+        </footer>
+        <script src="./renderer.js"></script>
+    </body>
 </html>
