# Feat: - DarkMode Toggler con animacion - Condicional para prevenir un `default???` de el evento click que causaba que se activara dos voces el metodo `window.darkMode.toggle()` - Función para validar el theme actual de el sistema para poner el toggle Theme Checkbox en su posicion.

--- a/index.html
+++ b/index.html
@@ -17,9 +17,14 @@
     <body>
         <header>
             <nav class="Themes">
-                <button id="toggle-theme">
-                    Toggle Theme
-                </button>
+                <div id="theme-toggle">
+                    <input type="checkbox" class="checkbox" id="checkbox">
+                    <label for="checkbox" class="checkbox-label">
+                        <i class="fas fa-moon"></i>
+                        <i class="fas fa-sun"></i>
+                        <span class="ball"></span>
+                    </label>
+                </div>
             </nav>
         </header>
         <main>
