# Cambio, RollBack para usar Electron.Js, HTML y CSS - Hay muchos cambios que hacer usando React por la Compilacion al momento de hacer la Build de Vite + React por el Uso de **ECMAScript** en Vite y CommonJS en Electron, El error de compatibilidad recae principalmente en el Modulo path con su palabra reservada "__dirname" al momento de usar ECMAScript

--- a/index.html
+++ b/index.html
@@ -58,8 +58,11 @@
                 <section>
                     <h3>Sebastian</h3>
                     <p>
-                        Sebastian lleva un registro positivo con un total de: 100000
+                        Sebastian lleva un registro positivo con un total de:
                     </p>
+                    <button id="notificationBtn">
+                        Notificación
+                    </button>
                 </section>
             </article>
         </main>
