--- a/indexReact.html
+++ b/indexReact.html
@@ -11,11 +11,12 @@
     http-equiv="X-Content-Security-Policy"
     content="default-src 'self'; script-src 'self'"
     />
-    <title>Mi Primer Electron</title>
+    <title>Mi Primer Electron + React</title>
     <link rel="stylesheet" type="text/css" href="./global.css" />
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/UI/main.tsx"></script>
+    <script src="./renderer.js"></script>
   </body>
 </html>
