--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <th>Usuario</th>
                     </tr>
                 </thead>
-                <tbody>
+                <tbody id="tablaBody">
                     <tr>
                         <td>Ingreso</td>
                         <td>24-07-2024 12:00:00</td>
