feat: update table footer to display dynamic total and enhance table row rendering

--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
                 </tbody>
                 <tfoot>
                     <tr>
-                        <th>Total: 100000</th>
+                        <th>
+                            Total: <div id="tablaTotal"></div>
+                        </th>
                         <td>
                             <button id="botonModal">
                                 ➕ Nueva Transaccion
