## Refactor: - **Major** Cambio de CommonJS en main.js a ECMAScript Modules main.mjs y en package.json el uso de 'type': 'module' | Funcionando - **preload.js sigue siendo un modulo CommonJS por temas de Compatibilidad por electron** - Estilos unicos de la Pagina 'index.html (ahorros)' - Estilos Globales para todas las paginas ## Feature: - Marcado de la Pagina Facturas y Arriendo - Estilos en la Pagina Facturas

--- a/index.html
+++ b/index.html
@@ -13,14 +13,15 @@
         />
         <title>Mi Primer Electron</title>
         <link rel="stylesheet" type="text/css" href="./global.css" />
+        <link rel="stylesheet" type="text/css" href="./ahorros.css" />
     </head>
     <body>
         <header>
             <nav>
                 <ul>
                     <li><a href="./index.html">Ahorros</a></li>
-                    <li><a href="./facturas.html">Facturas</a></li>
-                    <li><a href="./arriendo.html">Arriendo</a></li>
+                    <li><a href="./Pages/Facturas/facturas.html">Facturas</a></li>
+                    <li><a href="./Pages/Arriendo/arriendo.html">Arriendo</a></li>
                 </ul>
             </nav>
             <nav class="Themes">
