## Refactor: - Decepción, Actualmente esta como un Multipage-App - Para cambiarlo toca modificar el DOM de solo el Index.html, Ya tengo una idea de como hacerlo 😓

--- a/Pages/Arriendo/arriendo.html
+++ b/Pages/Arriendo/arriendo.html
@@ -38,6 +38,14 @@
     <main>
         <h1>Hola Arriendo</h1>
     </main>
+    <footer>
+        <h2>Versiones:</h2>
+        <ul class="versionsList">
+            <li id="nodeVersion"></li>
+            <li id="chromeVersion"></li>
+            <li id="electronVersion"></li>
+        </ul>
+    </footer>
     <!-- Script Para renderizar -->
     <script src="../../renderer.js"></script>
 </body>
