--- a/Pages/Facturas/facturas.html
+++ b/Pages/Facturas/facturas.html
@@ -50,6 +50,14 @@
 
         </section>
     </main>
+    <footer>
+        <h2>Versiones:</h2>
+        <ul class="versionsList">
+            <li id="nodeVersion"></li>
+            <li id="chromeVersion"></li>
+            <li id="electronVersion"></li>
+        </ul>
+    </footer>
     <!-- Script Para renderizar -->
      <script src="../../renderer.js"></script>
 </body>
