## Feat: - Implementada la Logica de JS para la Pagina Facturas - Mejoras en los estilos Globales y de la Pagina Facturas ## TODO: - Back-End (Servidor :) - Desarrollo de el Back usando TDD (Test Driven Desing) Para tener las pruebas Listas, Incluyendo las Automaticas. - Migrar la Logica Dinamica de cada pagina a un Script/Modulo Separado - Migrar la app de un Multipage-App a SPA - Mejorar los colores Secundarios y Terciarios de los Temas

--- a/Pages/Arriendo/arriendo.html
+++ b/Pages/Arriendo/arriendo.html
@@ -13,7 +13,7 @@
     />
     <title>Arriendo</title>
     <link rel="stylesheet" type="text/css" href="../../global.css" />
-    <link rel="stylesheet" href="text/css" href="./arriendo.css">
+    <link rel="stylesheet" type="text/css" href="./arriendo.css">
 </head>
 <body>
     <header>
