--- a/Pages/Facturas/facturas.html
+++ b/Pages/Facturas/facturas.html
@@ -13,7 +13,7 @@
     />
     <title>Facturas</title>
     <link rel="stylesheet" type="text/css" href="../../global.css" />
-    <link rel="stylesheet" href="text/css" href="./facturas.css">
+    <link rel="stylesheet" type="text/css" href="./facturas.css">
 </head>
 <body>
     <header>
@@ -37,18 +37,39 @@
     </header>
     <main>
         <h1>Hola Facturas</h1>
-        <section class="Gas">
-            a
-        </section>
-        <section class="Luz">
-            a
-        </section>
-        <section class="Agua">
-            a
-        </section>
-        <section class="Internet">
+        <!-- 
+            La idea es que en esta pagina solo se Vea
+            El estado de la Factura de el mes Actual,
+            En cuanto haga click al Article lo lleve a una
+            Pagina con la Informacion de Todas las Facturas de
+            ese tipo Ej:
+                Al hacer click en Gas, Lo lleva a una nueva pagina
+                que muestre todas las Facturas
+        -->
+        <article class="Gas">
+            <h2>Gas</h2>
+            <section id="Gas">
 
-        </section>
+            </section>
+        </article>
+        <article class="Luz">
+            <h2>Luz</h2>
+            <section id="Luz">
+
+            </section>
+        </article>
+        <article class="Agua">
+            <h2>Agua</h2>
+            <section id="Agua">
+
+            </section>
+        </article>
+        <article class="Internet">
+            <h2>Internet</h2>
+            <section id="Internet">
+
+            </section>
+        </article>
     </main>
     <footer>
         <h2>Versiones:</h2>
