feat: enhance factura articles with hover effects and footer buttons

--- a/Pages/Facturas/facturas.html
+++ b/Pages/Facturas/facturas.html
@@ -46,29 +46,46 @@
                 Al hacer click en Gas, Lo lleva a una nueva pagina
                 que muestre todas las Facturas
         -->
-        <article class="Gas">
+        <article class="Gas" title="Ver todas las Facturas de Gas">
             <h2>Gas</h2>
             <section id="Gas">
 
             </section>
+            <footer id="GasFoot">
+                <a href="" referrerpolicy="noreferrer">
+                    <button>Pagar</button>
+                </a>
+                <button>
+                    Agregar Comprobante
+                </button>
+            </footer>
         </article>
-        <article class="Luz">
+        <article class="Luz" title="Ver todas las Facturas de Luz">
             <h2>Luz</h2>
             <section id="Luz">
 
             </section>
+            <footer id="LuzFoot">
+
+            </footer>
         </article>
-        <article class="Agua">
+        <article class="Agua" title="Ver todas las Facturas de Agua">
             <h2>Agua</h2>
             <section id="Agua">
 
             </section>
+            <footer id="AguaFoot">
+
+            </footer>
         </article>
-        <article class="Internet">
+        <article class="Internet" title="Ver todas las Facturas de Internet">
             <h2>Internet</h2>
             <section id="Internet">
 
             </section>
+            <footer id="InternetFoot">
+
+            </footer>
         </article>
     </main>
     <footer>
